# data_structures

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_all.sh
include/: debug.h  linked_list.h
src/: linked_list.c
